--- a/asset/common.css
+++ b/asset/common.css
@@ -1250,7 +1250,7 @@ h2.footnotes{
 
 
 
-.act1 { margin: 0 1em; opacity: 0.4; }
+.outline-text-4 > details > summary { margin: 1em 0; opacity: 0.4; }
 
 
 
