best_try_and_best_chance

--- a/.src/asset/common.css
+++ b/.src/asset/common.css
@@ -1260,7 +1260,7 @@ h2.footnotes{
 li > details > summary,
 .outline-text-2 > details > summary,
 .outline-text-3 > details > summary,
-.outline-text-4 > details > summary { margin-bottom: 1.5em; opacity: 0.4; cursor: hand }
+.outline-text-4 > details > summary { margin-bottom: 1.5em; opacity: 0.4; cursor: pointer }
 
 
 
