--- a/asset/common.css
+++ b/asset/common.css
@@ -1258,6 +1258,9 @@ h2.footnotes{
 
 
 li > details > summary,
+.outline-2 > details > summary,
+.outline-3 > details > summary,
+.outline-4 > details > summary,
 .outline-text-2 > details > summary,
 .outline-text-3 > details > summary,
 .outline-text-4 > details > summary { margin-bottom: 1.5em; opacity: 0.4; cursor: pointer }
